@@ -1,21 +1,21 @@
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 public class Defun<T> implements InterfaceFactory<T> {
 
-    public final Map<String, Function> funciones = new HashMap<>();
+    public final Map<String, Function> functions = new HashMap<>();
 
     @Override
     public void execute(String exp) {
         String expression = evaluateExpression(exp);
 
-        String[] partes = expression.split("\\s"); 
+        String[] partes = expression.split("\\s",3); 
         String nameFunction = partes[0];
-        List<String> args = List.of(partes[1]);
+        List<String> args = Arrays.asList(partes[1].split(","));
         String instruction = partes[2];
-        funciones.put(nameFunction,new Function(args, instruction));
-
+        functions.put(nameFunction,new Function(args, instruction));
     }   
     
 
@@ -25,6 +25,9 @@ public class Defun<T> implements InterfaceFactory<T> {
         return expresion;
     }
 
+    public boolean isDefine(String functionName) {
+        return functions.containsKey(functionName);
+    }
 
 }
 
